...
          <View style={styles.section} accessible={true}>
            <Text
              style={[styles.sectionTitle, themedStyles.text(mode)]}
              accessible={true}
              accessibilityRole="header"
            >
              Opening Hours
            </Text>
            <Text style={[styles.sectionText, themedStyles.text(mode)]}>
              {openingHours}
            </Text>
          </View>
        );
...
                  <View style={styles.section}>
                    <Text
                      style={[styles.sectionTitle, themedStyles.text(mode)]}
                      accessible={true}
                      accessibilityRole="header"
                    >
                      Schedule
                    </Text>
                    <View
                      style={{
                        marginTop: 8,
                        flexDirection: "row",
                        alignItems: "center",
...
                    <View style={styles.section}>
                      <Text
                        style={[styles.sectionTitle, themedStyles.text(mode)]}
                        accessible={true}
                        accessibilityRole="header"
                      >
                        Address
                      </Text>
                      <View style={styles.addressContainer}>
                        <Text
                          style={[styles.addressText, themedStyles.text(mode)]}
                          accessible={true}
                        >
...
                    <View style={styles.section}>
                      <Text
                        style={[styles.sectionTitle, themedStyles.text(mode)]}
                        accessible={true}
                        accessibilityRole="header"
                      >
                        Description
                      </Text>
                      <Text
                        style={[
                          styles.descriptionText,
                          themedStyles.mutedText(mode),
                        ]}
...
