...
                padding: 0,
                backgroundColor: "transparent",
              },
            ]}
          >
            <SegmentedControl
              values={["Sir George Williams", "Loyola"]}
              selectedIndex={campus === "SGW" ? 0 : 1}
              onChange={(event) => {
                setCampus(
                  event.nativeEvent.selectedSegmentIndex === 0
                    ? "SGW"
                    : "Loyola",
...
