...
          northEast: { latitude: 45.49769, longitude: -73.5783 },
          southWest: { latitude: 45.49682, longitude: -73.57954 },
        },
      },
    ].sort((a, b) => a.level - b.level),
  },
  MB: {
    id: "MB",
    name: "John Molson Building",
    defaultFloor: 1,
    floors: [
      {
        id: "MB_S2",
        level: 1,
        label: "S2",
...
