...
    start: 0,
    end: 0,
  });
  const [isAndroidKeyboardVisible, setIsAndroidKeyboardVisible] = useState(false);
  const { location } = useUserLocation();
  const INPUT_ACCESSORY_VIEW_ID = "Directions Search";
  const CURRENT_LOCATION = "Current Location";

  useEffect(() => {
    refresh();
    fetchUpcomingEvents();
    if (startPointText.length === 0) {
      setStartPointText(CURRENT_LOCATION);
...
