...
}
const defaultWeekday = "7:00 AM - 11:00 PM";
const defaultWeekend = "7:00 AM - 9:00 PM";

export const SGWBuildingMetadata: Record<string, BuildingData> = {
  "H": {
    name: "Henry F. Hall Building",
    address: "1455 De Maisonneuve Blvd. W.",
    category: "general",
    description: "The Henry F. Hall Building is a building that belongs to the Concordia University which includes classrooms, engineering and research labs, social science departments, and major student areas.",
    facilities: ["Accessible entrance", "Accessible building elevator", "Metro", "Underground Passage"],
    openingHours: { weekdays: defaultWeekday, weekend: defaultWeekend }
  },
...
    category: "science",
    description: "The EV Building contains the faculty Dean's Office, many specialized labs, as well as student areas and classrooms.",
    facilities: ["Accessible entrance", "Accessible building elevator", "Metro" , "Underground Passage"],
    openingHours: { weekdays: defaultWeekday, weekend: defaultWeekend }
  },
  "MB": {
    name: "John Molson Building",
    address: "1450 Guy St.",
    category: "general",
    description: "The JMSB building is a business school, offering many classrooms, study areas, and student services.",
    facilities: ["Accessible entrance", "Accessible building elevator", "Metro", "Underground Passage"],
    openingHours: { weekdays: defaultWeekday, weekend: defaultWeekend }
  },
...
