...
      nodes: [
        // { id: "MB_S2_ENTRANCE_TUNNEL", floorId: "MB_S2", x: 57, y: 491, type: "entrance", label: "Tunnel from Hall Building" },

        //rooms
        { id: "MB_S2.285", floorId: "MB_S2", x: 794, y: 155, type: "room", label: "Room 285" },
        { id: "MB_S2.210", floorId: "MB_S2", x: 606, y: 360, type: "room", label: "Room 210" },
        { id: "MB_S2.330", floorId: "MB_S2", x: 786, y: 360, type: "room", label: "Room 330" },
        { id: "MB_S2.116", floorId: "MB_S2", x: 500, y: 833, type: "room", label: "Room 116" },
        { id: "MB_S2.105", floorId: "MB_S2", x: 533, y: 955, type: "room", label: "Room 105" },
        { id: "MB_S2.401", floorId: "MB_S2", x: 674, y: 923, type: "room", label: "Room 401" },
        { id: "MB_S2.465", floorId: "MB_S2", x: 810, y: 955, type: "room", label: "Room 465" },
        { id: "MB_S2.455", floorId: "MB_S2", x: 930, y: 944, type: "room", label: "Room 455" },
        { id: "MB_S2.445", floorId: "MB_S2", x: 939, y: 831, type: "room", label: "Room 445" },
...
