appId: com.conuwalks.app
tags:
  - critical
  - feature
---
- runFlow: 
    file: ../subflows/launch.yaml
    env:
        USERNAME: "${USERNAME}"
        PASSWORD: "${PASSWORD}"

- doubleTapOn:
    point: 50%, 50%

- waitForAnimationToEnd

- tapOn: "Sir George Williams"
- tapOn:
    point: 45%, 63%
- assertVisible: "John Molson Building.*"
- runFlow: ../subflows/expand-info-popup.yaml
- assertVisible: "Schedule"
- assertVisible: "Opening Hours"
- assertVisible: "Address"
- assertVisible: "1450 Guy.*"
- assertVisible: "Description"
- assertVisible: "The JMSB building is a business.*"
- runFlow: ../subflows/close-info-popup.yaml
- assertNotVisible: "John Molson Building.*"
