appId: com.conuwalks.app
tags:
  - feature
  - schedule
  - directions
---
- runFlow:
    file: ../subflows/launch-with-mock-data.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- waitForAnimationToEnd
- runFlow:
    file: ../subflows/clear-next-class-banner.yaml

- tapOn:
    id: "calendarview-button"
- waitForAnimationToEnd
- assertVisible: "Today"

# Matches 4 uppercase letters, a space, and 3 digits (e.g., "COMP 371", "ENGR 202")
- assertVisible: "[A-Z]{4} [0-9]{3}.*"
# Matches "1 or 2 digits : 2 digits AM/PM - 1 or 2 digits : 2 digits AM/PM"
# (e.g., "9:00 AM - 10:15 AM", "12:35 PM - 1:35 PM")
- assertVisible: ".*[0-9]{1,2}:[0-9]{2}.*[AP]M.*-.*[0-9]{1,2}:[0-9]{2}.*[AP]M.*"
- assertVisible: "(SGW|H|MB|LOY|EV|LB) .*"

- tapOn:
    id: "directions-button"
    index: 0
- waitForAnimationToEnd

- assertVisible: "Directions"
- assertVisible: "Current Location"
- assertVisible: ".* ETA"
- assertVisible: ".* min"

- runFlow:
    file: ../subflows/close-popup.yaml
